--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
     <p>grace is the sturbon lady in bugema university grace is the sturbon lady in bugema universitgrace is the sturbon lady in bugema universitgrace is the sturbon lady in bugema universitgrace is the sturbon lady in bugema universitgrace is the sturbon lady in bugema universitgrace is the sturbon lady in bugema universit</p>
     <img src="yesu.jpg" alt="">
     <ol>
-        <li><a href="INDEX.html">take mi to index</a></li>
+        <li><a href="index.html">take mi to index</a></li>
         <li><a href="#">take mi to page 1</a></li>
         <li><a href="page2.html">take mi to page 2</a></li>
         <li> <a href="page3.html">take mi to page 3</a></li>
