--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
     <h2>bugema univ students association</h2>
     <img src="GRACE.jpg" alt="">
     <ol>
-        <li> <a href="INDEX.html">take mi to index</a></li>
+        <li> <a href="index.html">take mi to index</a></li>
         <li> <a href="page1.html">take mi to page 1</a></li>
         <li>  <a href="page2.html">take mi to page 2</a></li>
         <li><a href="#">take mi to page 3</a></li>
