--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <h1>bugema university schools</h1>
     <hr>
     <img src="yesu.jpg" alt="" width="100px" height="200px">
-    <a href="INDEX.html">take mi to index</a>
+    <a href="index.html">take mi to index</a>
     <a href="page1.html">take mi to page 1</a>
     <a href="#">take mi to page 2</a>
     <a href="page3.html">take mi to page 3</a>
